EXTRA_DIST = README vars-pl.txt commands-pl.txt vars-pl-utf.txt commands-pl-utf.txt events.txt mouse.txt sim.txt themes.txt ekg2book ekg2book-en

install-data-am:
	$(INSTALL) -m 644 vars-pl.txt $(DESTDIR)$(pkgdatadir)
	$(INSTALL) -m 644 vars-pl-utf.txt $(DESTDIR)$(pkgdatadir)
	$(INSTALL) -m 644 commands-pl.txt $(DESTDIR)$(pkgdatadir)
	$(INSTALL) -m 644 commands-pl-utf.txt $(DESTDIR)$(pkgdatadir)

