EXTRA_DIST = \
  acx_pthread.m4 \
  codeset.m4 \
  expat.m4 \
  gcc_fvisibility.m4 \
  gcc_std.m4 \
  gcc_strict_aliasing.m4 \
  gettext.m4 \
  glibc2.m4 \
  glibc21.m4 \
  gpgme.m4 \
  gtk2.m4 \
  iconv.m4 \
  intdiv0.m4 \
  intmax.m4 \
  inttypes-pri.m4 \
  inttypes.m4 \
  inttypes_h.m4 \
  isc-posix.m4 \
  lcmessage.m4 \
  lib-ld.m4 \
  lib-link.m4 \
  lib-prefix.m4 \
  libgadu.m4 \
  libgnutls.m4 \
  libgsm.m4 \
  libidn.m4 \
  libxosd.m4 \
  longdouble.m4 \
  longlong.m4 \
  ncurses.m4 \
  nls.m4 \
  openssl.m4 \
  oracle.m4 \
  perl.m4 \
  pkg.m4 \
  po.m4 \
  printf-posix.m4 \
  progtest.m4 \
  python.m4 \
  readline.m4 \
  ruby.m4 \
  signed.m4 \
  size_max.m4 \
  sqlite.m4 \
  sqlite3.m4 \
  stdint.m4 \
  stdint_h.m4 \
  uintmax_t.m4 \
  ulonglong.m4 \
  wchar_t.m4 \
  wint_t.m4 \
  xsize.m4
